# ztg-runtime-lib

./: .gitmodules  Cargo.toml  README.md
integration-test/: Cargo.toml
integration-test/src/: lib.rs
integration-test/src/tests/: mock.rs
src/: lib.rs  runtime_structs.rs
tests/: index.ts  package-lock.json  package.json
ts/: .gitignore  customSpec.json  example.env  generateSpec.ts  package-lock.json  package.json  tsconfig.json  utils.ts
ts/test/: assetManager.test.ts  authorized.test.ts  court.test.ts  globalDisputes.test.ts  neoSwaps.test.ts  orderbook.test.ts  parimutuel.test.ts  predictionMarkets.test.ts  styx.test.ts  swaps.test.ts
ztg_runtime_example/: Cargo.toml  lib.rs
ztg_runtime_lib/: Cargo.toml
ztg_runtime_lib/src/: lib.rs  primitives.rs  runtime_structs.rs  ztg_primitives.rs
ztg_runtime_lib/src/primitives/: mod.rs
