[package]
name = "integration-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
frame-support = { workspace = true }
frame-benchmarking = { workspace = true }
frame-system = { workspace = true }
parity-scale-codec = { workspace = true }
sp-runtime = { workspace = true }
zeitgeist-primitives = { workspace = true }

[features]
default = ["std"]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
]
std = [
    "frame-benchmarking/std",
    "frame-support/std",
    "frame-system/std",
    "parity-scale-codec/std",
    "sp-runtime/std",
    "zeitgeist-primitives/std",
]
try-runtime = [
    "frame-support/try-runtime",
]