[package]
name = "ztg_runtime_lib"
version = "0.1.0"
authors = ["Jeremy Boetticher jeremy@projk.net"]
edition = "2021"
license = "MIT"
description = "Zeitgeist call runtime library for ink! smart contract development."

[dependencies]
ink = { version = "4.3.0", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
sp-io = { version = "30.0.0", default-features = false, features = ["disable_panic_handler", "disable_oom", "disable_allocator"] }
sp-runtime = { version = "31.0.1", default-features = false }

[dev-dependencies]
ink_e2e = "4.3.0"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-io/std"
]
ink-as-dependency = []
